Fri Jan  4 21:36:51 EET 2008
initialized