@@ -1,0 +1,17 @@
+#!/usr/local/bin/bash
+
+chf=/tmp/chfreq.
+rm $chf 2>/dev/null
+ee $chf
+ch=`cat $chf 2>/dev/null | wc -l`
+if [ $ch -gt 0 ]; then
+  echo "=== added $ch lines.."
+  echo '' >>CHANGES
+  echo " === "`date -u` ":: $USER@"`hostname -s`" ===" >>CHANGES
+  cat $chf >>CHANGES
+  tail -n 12 CHANGES
+else
+  echo "not changed."
+fi
+
+rm $chf 2>/dev/null
